First ideas are implemented, TODO: Write Interfaces , declarations and tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,13 @@
-add_library(ALL_LIBRARIES STATIC)
+set(backend_headres
+    Backend.hpp)
+
+set(backend_sources
+    Backend.cpp)
 
 add_subdirectory(data_backend)
 
-target_link_libraries(ALL_LIBRARIES   )
+add_library(ALL_LIBRARIES STATIC STATIC ${backend_headres} ${backend_sources} )
+
+target_link_libraries(ALL_LIBRARIES  backend_headres backend_sources Qt${QT_VERSION_MAJOR}::Core)
 
 set_target_properties(ALL_LIBRARIES PROPERTIES LINKER_LANGUAGE CXX)
