Start writing general BackendMediator mock tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(backend_headres
+set(backend_headers
     Backend.hpp)
 
 set(backend_sources
@@ -6,8 +6,10 @@ set(backend_sources
 
 add_subdirectory(data_backend)
 
-add_library(ALL_LIBRARIES STATIC STATIC ${backend_headres} ${backend_sources} )
+add_library(ALL_LIBRARIES STATIC
+    ${backend_headers}
+    ${backend_sources} )
 
-target_link_libraries(ALL_LIBRARIES  backend_headres backend_sources Qt${QT_VERSION_MAJOR}::Core)
+target_link_libraries(ALL_LIBRARIES Qt${QT_VERSION_MAJOR}::Core)
 
 set_target_properties(ALL_LIBRARIES PROPERTIES LINKER_LANGUAGE CXX)
