--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -83,12 +83,19 @@ set(Tests_files
     ${TESTED_HEADERS}
     )
 
+enable_testing()
+set(CTEST_OUTPUT_ON_FAILURE 1)
+set(GTEST_COLOR 1)
+
+find_package(GTest)
+
 function(add_test_exec test_name test_files test_libs)
     add_executable(${test_name} ${test_files} ${GTestFiles})
     target_include_directories(${test_name} PUBLIC ${TESTED_DIRECTORIES})
     target_compile_definitions(${test_name}
        PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
-   add_test(NAME ${test_name} COMMAND ${test_name})
+   gtest_discover_tests(${test_name})
+   #add_test(NAME ${test_name} COMMAND ${test_name})
    target_link_libraries(${test_name} PRIVATE
        Threads::Threads Qt5::Core Qt5::Quick Qt5::SerialPort ${test_libs})
 endfunction()
