--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,6 @@ add_library(ALL_LIBRARIES STATIC
     ${backend_headers}
     ${backend_sources} )
 
-target_link_libraries(ALL_LIBRARIES Qt${QT_VERSION_MAJOR}::Core)
+target_link_libraries(ALL_LIBRARIES Qt${QT_VERSION_MAJOR}::Core UTILITIES_LIB)
 
-set_target_properties(ALL_LIBRARIES PROPERTIES LINKER_LANGUAGE CXX)
+set_target_properties(ALL_LIBRARIES PROPERTIES LINKER_LANGUAGE CXX CMAKE_CXX_STANDARD 17)
