Implemented initial tests, lets do impl

--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -9,6 +9,6 @@ add_library(UTILITIES_LIB STATIC
     ${utilities_headers}
     ${utilities_sources} )
 
-target_link_libraries(UTILITIES_LIB )
+target_link_libraries(UTILITIES_LIB ${Boost_LIBRARIES})
 
 set_target_properties(UTILITIES_LIB PROPERTIES LINKER_LANGUAGE CXX CMAKE_CXX_STANDARD 17 )
