OK, first version of backend is finished TODO: Try to compile it

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,8 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "qcoreapplication": "cpp",
-        "qthreadpool": "cpp"
+        "qthreadpool": "cpp",
+        "regex": "cpp",
+        "shared_mutex": "cpp"
     }
 }
