Multiple queryAbout() calls work fine , TODO : add requestAction() calls tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
         "qcoreapplication": "cpp",
         "qthreadpool": "cpp",
         "regex": "cpp",
-        "shared_mutex": "cpp"
+        "shared_mutex": "cpp",
+        "*.ipp": "cpp"
     }
 }
