Ok , many changes in short time. main cmakelists does not build app from now, this is bridge between app src and tests. Moved main.cpp and  main.py to theirs env folders. Deleted thread_local static prefixes in extractKey() func. Main app cmakelists are in src folder from now. Cleaned up tests cmakelists. Added suificient includes to .hpp files.  Adapted configurator.sh to this situation.  TODO: Write theses tests.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,16 @@
 set(backend_headers
     Backend.hpp
-    Environment.hpp )
+    Environment.hpp
+    Matcher.hpp
+    Mediator.hpp
+    Proxy.hpp )
 
 set(backend_sources
     Backend.cpp
-    Environment.cpp)
+    Environment.cpp
+    Matcher.cpp
+    Mediator.cpp
+    Proxy.cpp)
 
 add_subdirectory(data_backend)
 add_subdirectory(utilities)
@@ -16,3 +22,14 @@ add_library(ALL_LIBRARIES STATIC
 target_link_libraries(ALL_LIBRARIES Qt${QT_VERSION_MAJOR}::Core UTILITIES_LIB)
 
 set_target_properties(ALL_LIBRARIES PROPERTIES LINKER_LANGUAGE CXX CMAKE_CXX_STANDARD 17)
+
+set(PROJECT_SOURCES
+        main.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/../qml.qrc
+    )   
+
+if(BUILD_APP)
+
+
+
+endif()
