--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,23 +2,6 @@ cmake_minimum_required(VERSION 3.5)
 
 project(Tests LANGUAGES CXX)
 
-##qt service stage 1
-
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-find_package(QT NAMES Qt5 REQUIRED)
-find_package(Threads REQUIRED)
-find_package(Qt5 COMPONENTS Core Quick SerialPort Test REQUIRED)
-
-##qt service stage 1 END
-
 ##generated stuff
 
 add_definitions(-DGTEST_LANGUAGE_CXX11)
@@ -38,68 +21,67 @@ elseif (UNIX AND EXISTS /usr/src/gtest)
     endif ()
 else ()
     message( FATAL_ERROR "No googletest src dir found - set GOOGLETEST_DIR to enable!")
-
 endif ()
 
 set(GTestFiles ${GTestSrc}/src/gtest-all.cc)
 set(GTestIncludes ${GTestSrc} ${GTestSrc}/include)
+
 if (NOT ${GMockSrc} STREQUAL "")
     list(APPEND GTestFiles ${GMockSrc}/src/gmock-all.cc)
     list(APPEND GTestIncludes ${GMockSrc} ${GMockSrc}/include)
 endif ()
 
+add_subdirectory(common_utils)
+
 include_directories(${GTestIncludes})
+include_directories(common_utils)
 
+set(INCLUDES
+    ${GTestIncludes}
+    common_utils
+    )
 ##generated stuff END
-
-##tested .cpp files
-
-##tested .cpp files END
 
 ##qt service stage 2
 
+# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src build)
+
+
 set(LIBS
     ALL_LIBRARIES
-)
-
-set(TESTED_DIRECTORIES
-    ${CMAKE_CURRENT_SOURCE_DIR}/../src
-    ${CMAKE_CURRENT_SOURCE_DIR}/../src/utilities
+    COMMON_UTILS
 )
 
 set(TESTED_HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/../src/Backend.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/../src/Environment.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/../utilites/ThreadsafeQueue.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/../utilites/ThreadPool.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../src/Mediator.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../src/Proxy.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../src/utilities/ThreadsafeQueue.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../src/utilities/TaskManager.hpp
 )
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src build)
-
-set(COMMON_UTILS
-    # CommonUtils.cpp
-    # CommonUtils.hpp
-    )
-
 enable_testing()
-find_package(GTest)
 
+find_package(GTest)
 find_package(Boost 1.71.0)
+
 if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
 endif()
 
 function(add_test name)
-    add_executable(${name} ${name}.hpp ${name}.cpp ${COMMON_UTILS} ${GTestFiles})
-    target_include_directories(${name} PUBLIC ${TESTED_DIRECTORIES})
+    add_executable(${name} ${name}.hpp ${name}.cpp ${GTestFiles} ${TESTED_HEADERS})
+    target_include_directories(${name} PUBLIC ${INCLUDES})
     target_compile_definitions(${name}
        PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
     gtest_discover_tests(${name})
     target_link_libraries(${name} PRIVATE
-       Threads::Threads Qt5::Core Qt5::Quick  Qt5::Test Qt5::SerialPort ${test_libs} ${LIBS} ${Boost_LIBRARIES})
+       Threads::Threads Qt5::Core Qt5::Quick Qt5::SerialPort 
+       ${LIBS} ${Boost_LIBRARIES} )
 endfunction()
 
-#add_test(BackendTests) DONE
+add_test(BackendTests) 
 add_test(DataBackendTests)
 #add_test(ThreadsafeQueueTests)
 #add_test(TaskManagerTests)
