--- a/tests/common_utils/CMakeLists.txt
+++ b/tests/common_utils/CMakeLists.txt
@@ -1,9 +1,16 @@
 set(common_utils_headers
     QFunctionWrapper.hpp
+    Mock.hpp
+    EventLoop.hpp
+    WrappersList.hpp
     )
 
 set(common_utils_sources
-    QFunctionWrapper.cpp)
+    QFunctionWrapper.cpp
+    Mock.cpp
+    EventLoop.cpp
+    WrappersList.cpp
+    )
 
 add_library(COMMON_UTILS STATIC
     ${common_utils_headers}
