--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,31 +11,13 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# QtCreator supports the following variables for Android, which are identical to qmake Android variables.
-# Check https://doc.qt.io/qt/deployment-android.html for more information.
-# They need to be set before the find_package(...) calls below.
-
-#if(ANDROID)
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-#    if (ANDROID_ABI STREQUAL "armeabi-v7a")
-#        set(ANDROID_EXTRA_LIBS
-#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libcrypto.so
-#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libssl.so)
-#    endif()
-#endif()
-
-find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Quick Multimedia  REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick Multimedia REQUIRED)
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Quick Multimedia SerialPort  REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick Multimedia SerialPort REQUIRED)
 find_package(Boost 1.71.0)
 
 if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
 endif()
-
-set(PROJECT_SOURCES
-        main.cpp
-        qml.qrc
-)
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(MediaCenter
@@ -53,8 +35,6 @@ else()
         )
     endif()
 endif()
-
-add_subdirectory(src)
 
 target_compile_definitions(MediaCenter
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
@@ -77,3 +57,13 @@ if(QT_VERSION_MAJOR EQUAL 6)
     qt_import_qml_plugins(MediaCenter)
     qt_finalize_executable(MediaCenter)
 endif()
+
+set(HEADERS_DIRS 
+    ${PROJECT_SOURCE_DIR}/src
+    ${PROJECT_SOURCE_DIR}/src/utilities
+    )
+
+include_directories(${HEADERS_DIRS})
+
+add_subdirectory(src)
+add_subdirectory(tests)
