I have came up with an idea: tests data will be in a json file from now. Moved QueryAboutPackage to common utils folder and crated its json loader.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -82,7 +82,7 @@ function(add_test name)
 endfunction()
 
 add_test(BackendTests) 
-add_test(DataBackendTests)
+# add_test(DataBackendTests)
 #add_test(ThreadsafeQueueTests)
 #add_test(TaskManagerTests)
 #add_test(EnvironmentTests)
