Renamed data_backend folder to multimedia_engine. Created multimedia engine class. MultimediaEngineTests have been written. TODO: implement MultimediaEngine

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ set(backend_sources
     Mediator.cpp
     Proxy.cpp)
 
-add_subdirectory(data_backend)
+add_subdirectory(multimedia_engine)
 add_subdirectory(utilities)
 
 add_library(ALL_LIBRARIES STATIC
