--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -83,8 +83,8 @@ function(add_test name)
        ${LIBS} ${Boost_LIBRARIES} )
 endfunction()
 
-add_test(BackendTests) 
-# add_test(DataBackendTests)
+add_test(MediatorTests) 
+#add_test(MultimediaEngineTests)
 #add_test(ThreadsafeQueueTests)
 #add_test(TaskManagerTests)
 #add_test(EnvironmentTests)
