Added some libraries from subdirs in src/cmakelists. Added ProxyMock alias to MediatorMock -> make a class from it later. IProxy inherits from IMediator from now. Matcher has the option to select  the regex subresult. Added virtual dtor in Mediator and replaced Matcher with CommandMatcher. Added MultimediaEngineBuilder. TODO: I'm stuck into bug... Backend fires subsystems correctly , but Mediator does not

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,11 @@ add_library(ALL_LIBRARIES STATIC
     ${backend_headers}
     ${backend_sources} )
 
-target_link_libraries(ALL_LIBRARIES Qt${QT_VERSION_MAJOR}::Core UTILITIES_LIB)
+set(LIBRARIES
+    MULTIMEDIA_ENGINE
+    UTILITIES_LIB)
+
+target_link_libraries(ALL_LIBRARIES Qt${QT_VERSION_MAJOR}::Core ${LIBRARIES})
 
 set_target_properties(ALL_LIBRARIES PROPERTIES LINKER_LANGUAGE CXX CMAKE_CXX_STANDARD 17)
 
