--- a/src/multimedia_engine/CMakeLists.txt
+++ b/src/multimedia_engine/CMakeLists.txt
@@ -1,9 +1,19 @@
-add_library(DATA_BACKEND_LIBRARIES STATIC)
+set(sources
+    MultimediaEngine.cpp
+    )
+
+set(headers
+    MultimediaEngine.hpp
+    )
+
+add_library(MULTIMEDIA_ENGINE STATIC
+            ${sources}
+            ${headers})
 
 add_subdirectory(audio)
 add_subdirectory(images)
 add_subdirectory(video)
 
-target_link_libraries(DATA_BACKEND_LIBRARIES Qt5::Core )
+target_link_libraries(MULTIMEDIA_ENGINE Qt5::Core )
 
-set_target_properties(DATA_BACKEND_LIBRARIES PROPERTIES LINKER_LANGUAGE CXX)
+set_target_properties(MULTIMEDIA_ENGINE PROPERTIES LINKER_LANGUAGE CXX)
