I'm moving this project to really multiprocess environment, so i have to totally clean up the project structure.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,7 +76,8 @@
         "shared_mutex": "cpp",
         "*.ipp": "cpp",
         "qvariant": "cpp",
-        "qeventloop": "cpp"
+        "qeventloop": "cpp",
+        "qstring": "cpp"
     },
     "C_Cpp.default.cppStandard": "gnu++20",
     "C_Cpp.default.cStandard": "gnu17"
