Two way DBus  communication works fine but requires async calls.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,8 @@
         "*.ipp": "cpp",
         "qvariant": "cpp",
         "qeventloop": "cpp",
-        "qstring": "cpp"
+        "qstring": "cpp",
+        "qtimer": "cpp"
     },
     "C_Cpp.default.cppStandard": "gnu++20",
     "C_Cpp.default.cStandard": "gnu17"
