Fixed clang format. Added Qt6::DBus links to TestUtils library. Fixed including headers into add_exebutable into top-level cmake.

--- a/src/Common/ModulesEssentials/SystemNode/CMakeLists.txt
+++ b/src/Common/ModulesEssentials/SystemNode/CMakeLists.txt
@@ -13,6 +13,9 @@ add_library(${Library} STATIC
             ${headers}
 )
 
-target_link_libraries(${Library} Qt6::Core Qt6::DBus)
+target_link_libraries(${Library} 
+    Qt6::Core 
+    Qt6::DBus
+)
 
 set_target_properties(${Library} PROPERTIES LINKER_LANGUAGE CXX)
