--- a/src/Common/ModulesEssentials/CMakeLists.txt
+++ b/src/Common/ModulesEssentials/CMakeLists.txt
@@ -1,21 +1,21 @@
 add_subdirectory(SystemNode)
-add_subdirectory(Mediator)
+# add_subdirectory(Mediator)
 
 set(Library ModulesEssentials)
 
 set(sources
-    Proxy.cpp
-    MultimediaEngine.cpp
+    # Proxy.cpp
+    # MultimediaEngine.cpp
     TaskManager.cpp
-    Backend.cpp
+    # Backend.cpp
 )
 
 set(headers
-    Proxy.hpp
-    MultimediaEngine.hpp
+    # Proxy.hpp
+    # MultimediaEngine.hpp
     TaskManager.hpp
     ThreadsafeQueue.hpp
-    Backend.hpp
+    # Backend.hpp
 )
 
 add_library(${Library} STATIC
@@ -25,7 +25,7 @@ add_library(${Library} STATIC
 
 target_link_libraries(${Library} 
     SystemNode 
-    Mediator
+    # Mediator
 )
 
 set_target_properties(${Library} PROPERTIES LINKER_LANGUAGE CXX)
