--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -58,23 +58,23 @@ set(MediatorDir ${ModulesEssentialsDir}/Mediator)
 
 include_directories(${ModulesEssentialsDir})
 include_directories(${SystemNodeDir})
-include_directories(${MediatorDir})
+# include_directories(${MediatorDir})
 
-add_subdirectory(sandbox)
+# add_subdirectory(sandbox)
 add_subdirectory(TestingUtils)
 
 
 include_directories(TestingUtils)
 
 set(TestedHeaders
-    ${ModulesEssentialsDir}/Backend.hpp
-    ${ModulesEssentialsDir}/MultimediaEngine.hpp
-    ${ModulesEssentialsDir}/Proxy.hpp
-    ${ModulesEssentialsDir}/ThreadsafeQueue.hpp
-    ${ModulesEssentialsDir}/TaskManager.hpp
+    # ${ModulesEssentialsDir}/Backend.hpp
+    # ${ModulesEssentialsDir}/MultimediaEngine.hpp
+    # ${ModulesEssentialsDir}/Proxy.hpp
+    # ${ModulesEssentialsDir}/ThreadsafeQueue.hpp
+    # ${ModulesEssentialsDir}/TaskManager.hpp
     ${SystemNodeDir}/SystemNode.hpp
-    ${MediatorDir}/Mediator.hpp
-    ${MediatorDir}/Matcher.hpp
+    # ${MediatorDir}/Mediator.hpp
+    # ${MediatorDir}/Matcher.hpp
 )
 
 enable_testing()
