Added mediator and it's build to the general build steps.  Matcher is in the common namespace from now. Added simple code runner to simple tests. Mediators test has been passed. Cleaned up SystemNode tests.

--- a/src/Common/ModulesEssentials/CMakeLists.txt
+++ b/src/Common/ModulesEssentials/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_subdirectory(SystemNode)
-# add_subdirectory(Mediator)
+add_subdirectory(Mediator)
 
 set(Library ModulesEssentials)
 
@@ -25,7 +25,7 @@ add_library(${Library} STATIC
 
 target_link_libraries(${Library} 
     SystemNode 
-    # Mediator
+    Mediator
 )
 
 set_target_properties(${Library} PROPERTIES LINKER_LANGUAGE CXX)
