--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,11 +9,16 @@ add_subdirectory(Modules)
     # ${Common}
 #  )
 
-# target_link_libraries(SourceLibraries Common)
 
 # set_target_properties(SourceLibraries PROPERTIES LINKER_LANGUAGE CXX CMAKE_CXX_STANDARD 17)
 
-# set(PROJECT_SOURCES
-#         main.cpp
-#         ${CMAKE_CURRENT_SOURCE_DIR}/../qml.qrc
-#     )   
+set(PROJECT_SOURCES
+        main.cpp
+    )   
+
+qt6_add_resources(PROJECT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../qml.qrc)
+
+add_executable(FrontendApp ${PROJECT_SOURCES})
+
+
+target_link_libraries(FrontendApp Qt6::Core Qt6::Quick Qt6::Multimedia)
